--- a/style.css
+++ b/style.css
@@ -143,10 +143,17 @@ input, select {
   margin-top: 2em;
   margin-left: auto;
   margin-right:auto;
-  width: 8em;
+  width: 6em;
   font-size: 28px;
 }
 
 .pong{
   padding: 20px;
+  margin-right: auto;
+  margin-left: auto;
+}
+#playfield{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
