--- a/style.css
+++ b/style.css
@@ -162,7 +162,8 @@ input, select {
   width: 100%;
 }
 .main-text{
-  margin-left: 300px;
+  margin-left: auto;
+  margin-right: auto;
   width: 600px;
 }
 .footer{
