--- a/style.css
+++ b/style.css
@@ -139,12 +139,10 @@ input, select {
 
 /* ---------------------------------- */
 
-.homepageTitle{
+.page-title{
   margin-top: 2em;
-  margin-left: auto;
-  margin-right:auto;
-  width: 6em;
   font-size: 28px;
+  margin-bottom: 1.5em;
 }
 
 .pong{
@@ -180,4 +178,10 @@ input, select {
   padding-top: 50px;
   padding-bottom: 5px;
   color: #719e40;
+}
+.list-1{
+  margin-top: 15px;
+  margin-left: 30px;
+  font-size: 20px;
+  line-height: 22px;
 }
